Online-Car-Sample/service-sms/Online-Car-SMS-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-sms
  labels:
    app: service-sms 
spec:
  selector:
    app: service-sms
  type: ClusterIP
  ports:
  - name: http
    port: 8001
    targetPort: 8001
    protocol: TCP
