Online-Car-Sample/service-sms/Online-Car-SMS-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-sms-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-sms-vs
spec:
  hosts:
  - "*"
  gateways:
  - service-sms-gateway
  http:
  - match:
    - uri:
        # exact: /sms-test
        prefix: /sms
    route:
    - destination:
        host: service-sms
        port:
          number: 8001
